# 2021-03-16-millie

./: .gitignore  README.md  my_settings.py  pull_request_template.md  pyproject.toml  requirements.txt
book/: models.py  tests.py  urls.py  views.py
book/migrations/: 0001_initial.py  0002_auto_20210325_1943.py
book/modules/: numeric.py
config/: settings.py  urls.py
model_utils/: models.py
payment/: models.py
payment/migrations/: 0001_initial.py
share/: decorators.py
user/: models.py  tests.py  urls.py  views.py
user/migrations/: 0001_initial.py
